--- a/includes/style.css
+++ b/includes/style.css
@@ -1197,8 +1197,7 @@ h2{
 
 .waze2 {
 	width:40px;
-	margin-right:30px;
-	/*display:none;*/
+	display:none;
 }
 
 .waze3 {
@@ -1494,93 +1493,93 @@ h2{
 	 
 	/* Place Page */	
 
-#placeLeft{
-	float:left;
+	#placeLeft{
+		float:left;
+	}
+	
+	#placeTarget{
+		width: 70%;
+	}
+	
+	#placePageName{
+		width: 20%;
+		margin-right:5%;
+	}
+	
+	#placePageType{
+		width: 100%;
+		margin-right: 25%;
+	}
+	
+	#placePic {
+		width: 100%;
+		height: auto;
+	}
+	
+	.linkPlace{
+		margin-right: 5%;
+		width: 50%;
+	}
+	
+	.waze2{
+		margin-right: 10%;
+	}
+	
+	#description{
+		width: 50%;
+		margin-right: 10%;
+		margin-top: 5%;
+	}
+	
+	.addresses {
+	    width: 100%;
+	    margin-right: 10%;
+	    margin-top: 4%;
+	   }
+	
+	#address{
+	    width: 50%;
+	    margin-right: 10%;
+	    margin-top: 1%;
+	}
+	
+	#distance{
+	   margin-right: 0%;
+	    margin-top: 0%;
+	}
+	
+	#fileDisplayArea2 img {
+		margin-right: 7%;
+		margin-top: -4%;
+	}
+	
+	.myLabel {
+		margin-right: 7%;
+	}
+	
+	#add-image{
+		width: 100%;
+	}
+	
+	.fileUpload {
+	    width: 50%;
+	    margin-right: 3%;
+	    margin-top: -4%;
+	}
+	
+	#chooseTag {
+	    width: 80%;
+	    margin-top: 10%;
+	    margin-right: 10%;
+	 }
+	
+	#tags{
+		width 100%;
+		margin-top: 65%;
+		margin-right: 6%;
+		width: 80%;
 }
-
-#placeTarget{
-	width: 100%;
-}
-
-#placePageName{
-	width: 20%;
-	margin-right:5%;
-}
-
-#placePageType{
-	width: 20%;
-	margin-right: 0%;
-}
-
-#placePic {
-	width: 100%;
-	height: auto;
-}
-
-.linkPlace{
-	margin-right: 5%;
-	width: 50%;
-}
-
-.waze2{
-	margin-right: 10%;;
-}
-
-#description{
-	width: 50%;
-	margin-right: 10%;
-	margin-top: 5%;
-}
-
-.addresses {
-    width: 100%;
-    margin-right: 10%;
-    margin-top: 4%;
-   }
-
-#address{
-    width: 50%;
-    margin-right: 10%;
-    margin-top: 1%;
-}
-
-#distance{
-   margin-right: 0%;
-    margin-top: 0%;
-}
-
-#fileDisplayArea2 img {
-	margin-right: 7%;
-	margin-top: -4%;
-}
-
-.myLabel {
-	margin-right: 7%;
-}
-
-#add-image{
-	width: 100%;
-}
-
-.fileUpload {
-    width: 50%;
-    margin-right: 3%;
-    margin-top: -4%;
-}
-
-#chooseTag {
-    width: 50%;
-    margin-top: 10%;
-    margin-right: 10%;
- }
-
-#tags{
-	width 100%;
-	margin-top: 65%;
-	margin-right: 6%;
-	width: 80%;
-}
-
+/*
 #commentArea{
 	color: #FFFFFF;
 	float:right;
@@ -1592,135 +1591,44 @@ h2{
 #commentInput{
 	top:300px;
 }
+*/
+
+.leftSideContainer{
+	width: 30%;
+	float: left;
+}
 
 .checkInBTN {
-	float: left;
-    margin: 45px 0 0 68px;
-	font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
-	font-weight:800;
-	background-color: #DB9A02;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	border-radius:6px;
-	border:1px solid #DB9A02;
-	display:inline-block;
-	cursor:pointer;
-	color:#000000;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 10px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffffff;
-}
-
-
-.checkInBTN:hover {
-	background:linear-gradient(to bottom, #C48A01 5%, #C48A01 100%);
-	background-color:#C48A01;
-
-}
-
-.checkInBTN:active {
-	position:relative;
-	top:1px;
-}
-.checkInBTN.pressed{
-	background-color: #7FC44A;
-    border: none;
+    width: 56%;
+    margin-left: 15%;
 }
 
 /* Stars Rank */
 #rating {
-    float:left;
-    border:none;
-    margin: 10px 0 0 40px;
-}
-
-#rating legend{
-	color:#DB9A02;
-    font-size: 20px;
-    font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
-    margin-right: 10px;
-}
-
-#rating:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-    clip:rect(0,0,0,0);
-}
-
-#rating:not(:checked) > label {
-    float:right;
-    width:1em;
-    padding-top:4px;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:200%;
-    line-height:1.2;
-    color:#ddd;
-    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-#rating:not(:checked) > label:before {
-    content: '★ ';
-}
-
-#rating > input:checked ~ label {
-    color: #f70;
-    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-#rating:not(:checked) > label:hover,
-#rating:not(:checked) > label:hover ~ label {
-    color: gold;
-    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-#rating > input:checked + label:hover,
-#rating > input:checked + label:hover ~ label,
-#rating > input:checked ~ label:hover,
-#rating > input:checked ~ label:hover ~ label,
-#rating > label:hover ~ input:checked ~ label {
-    color: #ea0;
-    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-#rating > label:active {
-    position:relative;
-    top:2px;
-    left:2px;
+	float: left;
+    margin-left: 8%;
+    margin-top: 30%;
+    width: 128%;
 }
 
 #currentRating {
-    float: right;
-    margin-right:60px;
-    font-weight: bold;
-    color: #DB9A02;
-    font-size: 19px;
-    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
-    width: 78px;
-    white-space: nowrap;
-    margin-top: 40px;
-}
+    width: 100%;
+    float: left;
+    margin-left: 24%;
+    }
 
 #allrating {
-    float: right;
-    width: 70px;
-    margin: 36px;
-    font-weight: bold;
-    color: #FFFFFF;
-    font-size: 19px;
-    font-family: 'Architects Daughter', cursive, Arial;
-}
+    float: left;
+    width: 30%;
+    margin-top: -16%;
+    margin-left: 10%;
+   }
 
-label[for="star5"]{
-	margin-right:20px;
-	
-}
-.fb-like{
-	float:left;
-	margin: 70px 0 0 68px;
-}
+.fb-like {
+    float: left;
+    width: 50%;
+    margin-left: 125%;
+   }
 
 .faceStyle{
 	float:right;
