--- a/includes/style.css
+++ b/includes/style.css
@@ -1513,6 +1513,13 @@ h2{
 		width: 50%;
 	}
 	
+	.waze3{
+		display: block;
+	}
+	
+	.waze4{
+		display:block;
+	}
 	.waze2{
 		margin-right: 10%;
 		display: block;
