--- a/includes/style.css
+++ b/includes/style.css
@@ -371,6 +371,9 @@ text-align: center;
     margin-bottom: 25px;
 }
 
+#placePagePicAside{
+	width:80%;
+}
 
 /*add Place*/
 .placeForm{
@@ -486,50 +489,6 @@ height: 108px;
 }
 
 
-input.addBtn {
-	float:right;
-	-moz-box-shadow:inset 0px 1px 0px 0px #fff6af;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #fff6af;
-	box-shadow:inset 0px 1px 0px 0px #fff6af;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffec64), color-stop(1, #ffab23));
-	background:-moz-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-	background:-webkit-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-	background:-o-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-	background:-ms-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#ffab23',GradientType=0);
-	background-color:#ffec64;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #ffaa22;
-	display:inline-block;
-	cursor:pointer;
-	color:#333333;
-	font-family:'trashim_clmbold','arial';
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffee66;
-}
-
-.addBtn:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffab23), color-stop(1, #ffec64));
-	background:-moz-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-	background:-webkit-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-	background:-o-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-	background:-ms-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
-	background-color:#ffab23;
-}
-
-.addBtn:active {
-	position:relative;
-	top:1px;
-	
-}
 
 
 /* Place Page */
@@ -738,6 +697,12 @@ input.addBtn {
     margin: 10px 0 0 40px;
 }
 
+#wantedRating {
+    float:left;
+    border:none;
+    margin: 10px 0 0 40px;
+}
+
 #rating legend{
 	color:#DB9A02;
     font-size: 20px;
@@ -745,7 +710,20 @@ input.addBtn {
     margin-right: 10px;
 }
 
+#wantedRating legend{
+	color:#DB9A02;
+    font-size: 20px;
+    font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
+    margin-right: 10px;
+}
+
 #rating:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+    clip:rect(0,0,0,0);
+}
+
+#wantedRating:not(:checked) > input {
     position:absolute;
     top:-9999px;
     clip:rect(0,0,0,0);
@@ -764,17 +742,47 @@ input.addBtn {
     text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
 }
 
+#wantedRating:not(:checked) > label {
+    float:right;
+    width:1em;
+    padding-top:4px;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:200%;
+    line-height:1.2;
+    color:#ddd;
+    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
+}
+
 #rating:not(:checked) > label:before {
     content: '★ ';
 }
+
+#wantedRating:not(:checked) > label:before {
+    content: '★ ';
+}
+
 
 #rating > input:checked ~ label {
     color: #f70;
     text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
 }
 
+#wantedRating > input:checked ~ label {
+    color: #f70;
+    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+
 #rating:not(:checked) > label:hover,
 #rating:not(:checked) > label:hover ~ label {
+    color: gold;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+#wantedRating:not(:checked) > label:hover,
+#wantedRating:not(:checked) > label:hover ~ label {
     color: gold;
     text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
 }
@@ -788,7 +796,22 @@ input.addBtn {
     text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
 }
 
+#wantedRating > input:checked + label:hover,
+#wantedRating > input:checked + label:hover ~ label,
+#wantedRating > input:checked ~ label:hover,
+#wantedRating > input:checked ~ label:hover ~ label,
+#wantedRating > label:hover ~ input:checked ~ label {
+    color: #ea0;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
 #rating > label:active {
+    position:relative;
+    top:2px;
+    left:2px;
+}
+
+#wantedRating > label:active {
     position:relative;
     top:2px;
     left:2px;
@@ -1017,6 +1040,11 @@ label[for="star5"]{
   #lastPlaces span{
   	margin:1%;
   }
+  
+  #wantedRating{
+  	width: 80%;
+  	margin-right: 20%;
+  }
  
  /* scoreBoard */
 
@@ -1227,7 +1255,7 @@ h2{
 	
 	main{
 		width: 100%;
-		height: 100%;
+		height: 2130px;
 	}
 	
 	header{
@@ -1247,7 +1275,6 @@ h2{
 	#target > div {
 		width: 100%;
 		height: auto;
-		
 	}
 	
 	#target > div:nth-child(3),
@@ -1263,7 +1290,15 @@ h2{
 	    width: 100%;
 		margin-right: 17.5%;
 	}
+	
+	#indexAside h3{
+		color: #DB9A02;
+	}
 
+	#placeName {
+		color: white;
+	}
+	
 	.waze{
 		width:40px;
 		display: block;
@@ -1272,6 +1307,10 @@ h2{
 	#asideDescription{
 		text-align: center;
 		width: 70%;
+	}
+	
+	.placePageTypeAside{
+		width: 100%;
 	}
 	
 	#filterTarget{
@@ -1293,13 +1332,7 @@ h2{
 	    width: 100%;
 	}
 	
-	.place img{
-		width: 100%;
-	}
-
-	.crop {
-		width:100%;
-	}
+	
 	
 	/*addPlace Mobile*/
 	
