--- a/includes/style.css
+++ b/includes/style.css
@@ -342,25 +342,25 @@ text-align: center;
     width: 250px;
 }
 
-#indexAside h3 {
+#indexAside h2 {
     direction: rtl;
     font-size: 20px;
     width: 145px;
-    height: 50px;
     font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
     color: #FAFBF6;
-    margin-top: -25px;
+    margin-top: -2px;
+    padding-top: 15px;
     margin-right: 10px;
 }
 
-#indexAside h4 {
+#indexAside h3 {
     direction: rtl;
-    float: right;
-    width: 100px;
-    margin-top: -40px;
+    font-size: 15px;
+    width: 145px;
     font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
     color: #FAFBF6;
-    margin-right: 60px;
+    margin-right: 10px;
+    margin-top: 77px;
 }
 
 #asideDescription {
@@ -1291,15 +1291,6 @@ h2{
 		margin-right: 17.5%;
 	}
 	
-	#indexAside h3{
-		color: #DB9A02;
-	}
-
-	#placeName {
-		color: white;
-	}
-	
-	
 	.place img{
 		width: 100%;
 	}
@@ -1313,16 +1304,16 @@ h2{
 		display: block;
 	}
 	
-	#place h3{
-		text-align:center;
-	}
-	
 	#asideDescription{
 		text-align: center;
 		width: 70%;
 	}
 	
-	.placePageTypeAside{
+	#placeName{
+		width: 100%;
+	}
+	
+	#placePageTypeAside{
 		width: 100%;
 	}
 	
