--- a/includes/style.css
+++ b/includes/style.css
@@ -1252,7 +1252,7 @@ h2{
 	
 	main{
 		width: 100%;
-		height: 2400px;
+		height: 2600px;
 	}
 	
 	header{
@@ -1546,11 +1546,14 @@ h2{
 		width: 50%;
 	}
 	
-	.waze3{
-		display: block;
-	}
+	.waze4 {
+	    display: block;
+	    float: left;
+	    margin-top: -2%;
+	    margin-left: 2%;
+   }
 	
-	.waze4{
+	.waze3{
 		display:block;
 	}
 	
