--- a/includes/style.css
+++ b/includes/style.css
@@ -1253,7 +1253,7 @@ h2{
 	
 	main{
 		width: 100%;
-		height: 2600px;
+		height: 3000px;
 	}
 	
 	header{
@@ -1544,11 +1544,14 @@ h2{
 		height: auto;
 	}
 	
-	.linkPlace{
-		margin-right: 5%;
-		width: 50%;
+
+	.linkPlace {
+	    margin-right: 5%;
+	    width: 50%;
+	    height: 200px;
+	    overflow: hidden;
 	}
-	
+
 	.waze4 {
 	    display: block;
 	    float: left;
@@ -1675,7 +1678,7 @@ h2{
 	    float: left;
 	    width: -3%;
 	    margin-left: 5%;
-	    margin-top: -167%;
+	    margin-top: -160%;
 	}
 	
 	.faceStyle{
