--- a/includes/style.css
+++ b/includes/style.css
@@ -688,9 +688,9 @@ height: 108px;
 
 /* Stars Rank */
 #rating {
-    float:left;
-    border:none;
-    margin: 10px 0 0 40px;
+    float: left;
+    border: none;
+    margin: 10px 0 0 70px;
 }
 
 #wantedRating {
@@ -1655,10 +1655,7 @@ h2{
 	    width: 100%;
 	}
 	
-	label[for="star5"]{
-		float: left;
-		margin-left: 3%;
-	}
+
 	
 	#currentRating {
 	    width: 100%;
@@ -1682,10 +1679,8 @@ h2{
 	}
 	
 	.faceStyle{
-		float:right;
-		width: 600px;
-		margin-right:200px;
-	    margin-top: 50px;
+		width: 90%;
+		margin-right:5%;
 	}
 	
 	.clear{
@@ -1700,8 +1695,44 @@ h2{
 	    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	}
 	
+/*menu*/
 
+	#cssmenu li{
+		width: 100%;
+	}
 
+	#helloUser {
+    margin-top: -15px;
+	}
+	
+	.menuHamburger {
+	    display: block;
+	    height: 40px;
+	    background-color: #000;
+	}
+	
+	.menuHamburger:before {
+	    content: "";
+	    float: right;
+	    display: block;
+	    width: 25px;
+	    height: 20px;
+	    box-shadow: inset 0 3px white, inset 0 -3px white, inset 0 9px black, inset 0 12px white;
+	    margin-top: 10px;
+	    margin-right: 10px;
+	}
+	
+	#cssmenu {
+		transition: all 0.25s linear;
+		height: 0;
+		overflow: hidden;
+	}
+	
+	.menuHamburger:hover + #cssmenu {
+		height: 400px;
+	}
+	
+	
 }
 
  
