--- a/includes/style.css
+++ b/includes/style.css
@@ -94,6 +94,15 @@ main{
     float: right;
 }
 
+#menuHamburger{
+    -webkit-appearance: none;
+    height: 0px;
+    weight: 0px
+}
+
+input[type=checkbox]{
+	-webkit-appearance:none;
+}
 
 /*homepage- main */
 
@@ -101,7 +110,7 @@ main{
     float: left;
     font-family: 'Architects Daughter', cursive,'arial';
     color: #FFFFFF;
-    margin-top:80px;
+    margin-top:-2px;
 	width: 200px;
 	height: 22px;
 }
