--- a/includes/style.css
+++ b/includes/style.css
@@ -111,6 +111,7 @@ input[type=checkbox]{
     font-family: 'Architects Daughter', cursive,'arial';
     color: #FFFFFF;
     margin-top:-2px;
+    margin-left: 8px;
 	width: 200px;
 	height: 22px;
 }
@@ -278,6 +279,13 @@ h3{
 }
 
 .pageName{
+	margin-right: 50px;
+	margin-top:70px;
+	color: #FAFBF6;
+	font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
+}
+
+.pageNameMain{
 	margin-right: 50px;
 	margin-top:70px;
 	color: #FAFBF6;
@@ -1284,6 +1292,11 @@ h2{
 		padding-top:0%;
 	}
 	
+	.pageNameMain{
+		padding-right: 10%;
+		padding-top:20%;
+	}
+	
 	#target > div {
 		width: 100%;
 		height: auto;
@@ -1718,7 +1731,7 @@ h2{
 
 	#helloUser {
 	    margin-top: 25px;
-	    width: 40%;
+	    width: 30%;
 	    height: auto;
 	    direction: ltr;
 	    margin-left: 4%;
