--- a/includes/style.css
+++ b/includes/style.css
@@ -1567,15 +1567,15 @@ h2{
 	}
 	
 	#placePic {
-		width: 100%;
+		width: 75%;
 		height: auto;
 	}
 	
 
 	.linkPlace {
 	    margin-right: 5%;
-	    width: 50%;
-	    height: 200px;
+	    width: 100%;
+	    height: 255px;
 	    overflow: hidden;
 	}
 
@@ -1598,7 +1598,7 @@ h2{
 	#description{
 		width: 50%;
 		margin-right: 10%;
-		margin-top: 5%;
+		margin-top:22%;
 	}
 	
 	.addresses {
@@ -1620,7 +1620,7 @@ h2{
 	
 	#fileDisplayArea2 img {
 		margin-right: 7%;
-		margin-top: -4%;
+		margin-top: 4%;
 	}
 	
 	.myLabel {
@@ -1670,39 +1670,43 @@ h2{
 	
 	.checkInBTN {
 	    width: 25%;
-	    margin-left: 5%;
-	    margin-top: -180%;
+	    float: right;
+	    margin-right: 12%;
+	    margin-top: 2%;
 	}
+	
 	/* Stars Rank */
 	
 	#rating {
 	    float: left;
 	    margin-left: -10%;
-	    margin-top: -90%;
+	    margin-top: -120%;
 	    width: 100%;
 	}
 	
-
+	#placePagePic{
+		width: 100%;
+	}
 	
 	#currentRating {
 	    width: 100%;
 	    float: left;
 	    margin-left: -13%;
-	    margin-top: -65%;
+	    margin-top: -95%;
 	}
 	
 	#allrating {
 	    float: left;
 	    width: 38%;
 	    margin-left: -13%;
-	    margin-top: -67%;
+	    margin-top: -97%;
 	   }
 	
 	.fb-like {
 	    float: left;
 	    width: -3%;
 	    margin-left: 5%;
-	    margin-top: -160%;
+	    margin-top: 0%;
 	}
 	
 	.faceStyle{
