--- a/includes/style.css
+++ b/includes/style.css
@@ -162,13 +162,14 @@ h3{
 	border-radius: 5px;
 }
 
-.changeAddress{
+.changeAddress {
     display: block;
     float: right;
     margin-top: 10px;
     border-radius: 5px;
     height: 22px;
-    margin-right:20px;
+    margin-right: 20px;
+    width: 200px;
 }
 
 .filterForm{
@@ -533,6 +534,12 @@ height: 108px;
     width: 250px;
     height: auto;
     overflow: hidden;
+}
+
+.linkPlace{
+	height: 230px;
+	overflow: hidden;
+	
 }
 
 #placePagePicAside {
@@ -1201,6 +1208,7 @@ div.ui-dialog-buttonset {
     float: left;
     margin-left: 164px;
 }
+
 .connectIndex{
 	margin: auto;
     width: 22%;
@@ -1209,6 +1217,7 @@ div.ui-dialog-buttonset {
 .connectIndexImage{
 	float:right;
 	margin-bottom: 20px;
+	margin-right: 115px;
 }
 
 h2{
