--- a/includes/style.css
+++ b/includes/style.css
@@ -164,12 +164,13 @@ h3{
 
 .changeAddress {
     display: block;
+    visibility: hidden;
     float: right;
     margin-top: 10px;
     border-radius: 5px;
     height: 22px;
     margin-right: 20px;
-    width: 200px;
+    width: 170px;
 }
 
 .filterForm{
