--- a/includes/style.css
+++ b/includes/style.css
@@ -335,11 +335,11 @@ width: 100%;
 }
 
 .place a {
-display: block;
-height: Calc(100%);
-text-align: center;
+    width: 100%;
+    display: block;
+    height: Calc(100%);
+    text-align: center;
 }
-
 .crop img{
 	width:100%;
 }
