--- a/includes/style.css
+++ b/includes/style.css
@@ -114,7 +114,7 @@ input[type=checkbox]{
 }
 
 #helloUser img{
-    border-radius: 50%;
+    border-radius: 30%;
     height: 50px;
     float: left;
     margin-top: -33px;
@@ -1345,6 +1345,10 @@ h2{
 		width: 100%;
 	}
 	
+		#target .waze3{
+		display:block;
+		width: 15%;
+	}
 	
 
 	.crop {
