--- a/includes/style.css
+++ b/includes/style.css
@@ -1200,11 +1200,7 @@ div.ui-dialog-buttonset {
     color: #FFFFFF;
 }
 
-.kissImage{
-    margin-top: 29px;
-    float: left;
-    margin-left: 164px;
-}
+
 
 .connectIndex {
     margin-top: 15%;
@@ -1270,6 +1266,12 @@ h2{
 .waze4 {
 	width:40px;
 	display:none;
+}
+
+.kissWrap{
+    margin-top: 29px;
+    float: left;
+    margin-left: 164px;
 }
 
 /* end of desktop*/
@@ -1561,7 +1563,7 @@ h2{
 	  }
 	  
 	  /* about us */
-	 .kissImage{
+	 .kissWrap{
 	 	width: 50%;
 	 	margin-left: 25%;
 	 }
